<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/allbackgroundColor">

    <androidx.cardview.widget.CardView
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_5sdp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_185sdp"
            android:src="@drawable/cover_1"
            android:scaleType="fitXY"
            />

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/bl1"
        android:layout_below="@id/cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <androidx.cardview.widget.CardView
            android:onClick="start"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_5sdp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/primary"
            >
            <LinearLayout
                android:background="@color/primary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/ic_quotes"
                    app:tint="@color/text_color"/>

                <TextView
                    android:padding="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/text_color"
                    android:fontFamily="@font/bangla_english"
                    android:text="@string/let_s_start"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:onClick="favorite"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_5sdp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/primary"
            >
            <LinearLayout
                android:background="@color/primary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/ic_liked"
                    app:tint="@color/text_color"/>

                <TextView
                    android:padding="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/text_color"
                    android:fontFamily="@font/bangla_english"
                    android:text="@string/favorite"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>
    <LinearLayout
        android:id="@+id/bl2"
        android:layout_below="@id/bl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >




    </LinearLayout>


    <LinearLayout
        android:id="@+id/bl3"
        android:layout_below="@id/bl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="center"
        >
        <androidx.cardview.widget.CardView
            android:onClick="rate_us"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_5sdp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/primary"
            >
            <LinearLayout
                android:background="@color/primary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/ic_rate"
                    app:tint="@color/text_color"/>

                <TextView
                    android:padding="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/text_color"
                    android:fontFamily="@font/bangla_english"
                    android:text="@string/rate_us"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</RelativeLayout>