<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_250sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_marginTop="@dimen/_8sdp"
    android:layout_marginLeft="@dimen/_8sdp"
    android:layout_marginRight="@dimen/_8sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    android:padding="@dimen/_10sdp"
app:cardElevation="@dimen/_20sdp"
    android:backgroundTint="@color/status_menu_background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:drawableLeft="@drawable/id"
            android:fontFamily="@font/nosifer"
            android:text="    Bangla status"
            android:textColor="@color/Title_text_color"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_209sdp"

            >

            <RelativeLayout

                android:clickable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/menu"
                android:gravity="center"
                >
                <ImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/status_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#454545"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#77000000"
                    />


                <TextView
                    android:id="@+id/status_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:layout_marginEnd="@dimen/_1sdp"
                    android:layout_marginBottom="@dimen/_1sdp"
                    android:fontFamily="@font/bangla_english"
                    android:gravity="center"
                    android:text="এখানে লিখে পরীক্ষা করুন"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_14sdp" />




            </RelativeLayout>



            <LinearLayout
                android:id="@+id/menu"
                android:layout_alignParentBottom="true"
                android:background="@color/status_menu_background"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:id="@+id/like"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:id="@+id/btn_like"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_like"
                        android:layout_margin="@dimen/_3sdp"
                        />
                    <TextView
                        android:id="@+id/text_like"
                        android:textColor="@color/text_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/bangla_english"
                        android:text="@string/like"
                        android:layout_margin="@dimen/_3sdp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/status_content"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/edit"
                        android:layout_margin="@dimen/_3sdp"
                        />
                    <TextView

                        android:textColor="@color/text_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/bangla_english"
                        android:text="@string/like"
                        android:layout_margin="@dimen/_3sdp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/copy"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_copy"
                        android:layout_margin="@dimen/_3sdp"
                        />
                    <TextView
                        android:textColor="@color/text_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/bangla_english"
                        android:text="@string/copy"
                        android:layout_margin="@dimen/_3sdp"
                        />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/share"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/share"
                        android:layout_margin="@dimen/_3sdp"
                        />
                    <TextView
                        android:textColor="@color/text_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/bangla_english"
                        android:text="@string/share"
                        android:layout_margin="@dimen/_3sdp"
                        />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>




</androidx.cardview.widget.CardView>